solved some Alignment problems.

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -53,10 +53,6 @@ html {
   margin: 0 6rem;
 }
 
-.py-7 {
-  padding: 7rem 0;
-}
-
 .p-7 {
   padding: 7rem !important;
 }
@@ -158,6 +154,9 @@ li {
     font-size: 3rem;
   }
 }
+.hover:hover {
+  color: var(--white) !important;
+}
 
 .loan_container,
 .insaurance {
@@ -216,7 +215,11 @@ li {
 
 .nav-item a {
   color: var(--text-gray);
-  font-size: 2.2rem !important;
+  font-size: 2.1rem !important;
+
+  &:hover {
+    color: var(--dark-blue);
+  }
 }
 
 /***** End NavBar Section *****/
@@ -243,6 +246,7 @@ li {
 
 .loan_container {
   background: var(--bg-light-gray);
+  padding: 5rem 0;
 
   & .image_container {
     & .loan {
@@ -267,6 +271,7 @@ li {
 
 .insaurance {
   background: var(--bg-light-gray);
+  padding: 5rem 0;
 
   & .image_container {
     & .insaurance1 {
@@ -336,7 +341,7 @@ li {
 
     & .custom-card {
       width: 30rem;
-      height: 34.7rem;
+      height: 37rem;
       border: 2px solid #dddd;
       background: var(--bg-light-gray);
       position: relative;
@@ -354,8 +359,11 @@ li {
       .steps-container {
         margin-bottom: -5.1rem;
         & .steps {
-          width: 4.6rem;
-          height: 4.6rem;
+          width: 50px;
+          height: 50px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
           border-radius: 50%;
           -webkit-border-radius: 50%;
           -moz-border-radius: 50%;
@@ -363,7 +371,7 @@ li {
           -o-border-radius: 50%;
           background: var(--dark-blue);
           color: var(--white);
-          font-size: 2.8rem;
+          font-size: 2.7rem;
           border: 3px solid var(--white);
         }
       }
@@ -641,13 +649,7 @@ li {
 
 @media screen and (width < 1240px) {
   html {
-    font-size: 56%;
-  }
-}
-
-@media screen and (width < 1140px) {
-  html {
-    font-size: 52%;
+    font-size: 53%;
   }
 }
 
@@ -715,6 +717,26 @@ li {
 @media screen and (width < 548px) {
   .footer {
     background: linear-gradient(200deg, #000000 0%, #003c79 100%);
+  }
+
+  .insaurance {
+    & .image_container {
+      & .insaurance2 {
+        width: 47rem;
+        margin-bottom: -9rem;
+        z-index: 2;
+      }
+    }
+  }
+
+  .loan_container {
+    & .image_container {
+      & .loan2 {
+        width: 37rem;
+        margin-bottom: -8rem;
+        z-index: 2;
+      }
+    }
   }
 }
 /***** End Responsiveness Section *****/
